fix toggle sidepanel toggle not showing on mobile

--- a/client/src/ui/GameRoom/sidePanel/sidePanel.scss
+++ b/client/src/ui/GameRoom/sidePanel/sidePanel.scss
@@ -31,6 +31,9 @@ $text-color: #D4D3D3;
 			transform: translateX(100%) !important;
 			opacity: 0; 
 		}
+		.panel-wrapper{
+			right: 30%; // -100% + 70%
+		}
 		// transform: translateX(25vw);
 	}
 	.bg-overlay  {
@@ -48,13 +51,13 @@ $text-color: #D4D3D3;
 		// background-color: #989695;
 		pointer-events: none;
 		position: absolute;
-		float:right;
 		width: 70%;
 		height: 100%;
 		right: 0%;
 		top: 0%;
 		display: flex;
 		flex-direction: column;
+		transition: all .1s ease-in-out, opacity 2s ease;
 		.tabs{
 			pointer-events: none;
 			justify-content: flex-start;
@@ -128,8 +131,8 @@ $text-color: #D4D3D3;
 				&.close {
 					// padding-right: 0rem;
 					padding-left: 0.25rem/* 16px */;
-					-webkit-transform: scaleX(-1) translate(100%, 0%);
-  					transform: scaleX(-1) translate(100%, 0%);
+					-webkit-transform: scaleX(-1) translate(99%, 0%);
+  					transform: scaleX(-1) translate(99%, 0%);
 				}
 			}
 
@@ -146,22 +149,21 @@ $text-color: #D4D3D3;
 
 //   'lg': '1024px',
 @media (min-width: 1024px) {
-.panel-wrapper { 
-position: static !important;
-width: 100% !important;
-
-}
-.side-panel { 
-	width: 25%;
-	position: relative;
-	background-color: transparent;
-	&.panel-hidden{
-	width: 0%;
+	.panel-wrapper { 
+		position: static !important;
+		width: 100% !important;
 	}
-}
-.bg-overlay {
-	display: none !important;
-}
+	.side-panel { 
+		width: 25%;
+		position: relative;
+		background-color: transparent;
+		&.panel-hidden{
+			width: 0%;
+		}
+	}
+	.bg-overlay {
+		display: none !important;
+	}
 }
 
 //   'xl': '1280px',
